# hattrick_libs

./: .gitignore  .pre-commit-config.yaml  README.md  __main__.py  pyproject.toml
ht_libs/: README.md  config.py  do_challenge.py  do_hattrick_request.py  get_flags.py  get_leaguelevels.py  get_matchdetails.py  get_matches.py  get_series.py  get_teamdetails.py  get_trainer_avatar.py  get_worlddetails.py  pyproject.toml  request_token_status.py
static/: allflags.xml
