[project]
name = "hattrick_libs"
version = "0.4.12"
description = "A library for hattrick.org data"
dependencies = [
    "bs4>=0.0.1",
    "lxml>=4.9.3",
    "rauth>=0.7.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
  "ht_libs",
  "static/*.xml",
]

[tool.rye.workspace]
members = ["ht_libs"]

