[project]
name = "hattrick_libs"
version = "0.17.1"
description = "A library for hattrick.org data"
dependencies = [
    "bs4>=0.0.1",
    "lxml>=4.9.3",
    "rauth>=0.7.3",
    "types-beautifulsoup4>=4.12.0.7",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.12.1",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "isort>=5.13.2",
    "pre-commit>=3.5.0",
    "pylint>=3.0.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
        packages = ["ht_libs"]

[tool.rye.workspace]
members = ["ht_libs"]

