[project]
name = "ht_libs"
version = "0.15.1"
description = "Add your description here"
authors = [
    { name = "joe", email = "github@schicker.guru" }
]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling<=1.18.0"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
